--- a/src/components/clocks/Clock.scss
+++ b/src/components/clocks/Clock.scss
@@ -20,7 +20,7 @@
     flex-wrap: wrap;
     margin: 2rem auto;
     width: 5rem;
-    height: 5rem;
+    height: 10rem;
     border-radius: 50px;
     background-color: var(--default-bg-color);
 
@@ -30,9 +30,15 @@
     }
 
     .firstSpan {
+      transition: 0.4s;
+      font-size: 1rem;
+      margin-top: 0.8rem;
+      text-align: center;
+      color: var(--default-text-color);
     }
 
     .secondSpan {
+      z-index: 100;
       transition: 0.4s;
       font-size: 1rem;
       margin-top: 0.8rem;
